# phoenix

./: .clang-format  .cproject  .editorconfig  .gdbinit  .gitignore  .project  CMakeLists.txt  CMakePresets.json  CodingStyle.xml  LICENSE  Makefile  README.md  run.sh  stl.natvis
kernel/: CMakeLists.txt  Makefile  specs  syscall-64.txt
kernel/arch/x64/: linker.gen
kernel/boot/: SetupProcessor.S  SetupProcessor.cpp  SetupProcessor.hpp  boot.S  boot.c  boot.cpp  boot.h  long_mode.S  processor_struct.c  processor_struct.cpp  processor_struct.h  processor_struct.hpp  user_apps.S
kernel/boot/common/: ProcessorContant.h  ProcessorInit.S  ProcessorInit.cpp  ProcessorInit.h
kernel/boot/limine/: Entry.cpp  MemoryInit.cpp  MemoryInit.h  limine.cfg  limine.h  linker.ld  main.cpp
kernel/core/: Clock.cpp  Clock.hpp  Console.cpp  Console.hpp  Debug.hpp  Kernel.cpp  Process.cpp  Process.hpp  ProcessTable.cpp  ProcessTable.hpp  Syscall.cpp  console.cpp  console.hpp  cpu.h  ctx_sw.S  handlers.S  kernel.cpp  kernel.hpp
kernel/core/interrupt/: InterruptManager.S  InterruptManager.cpp  InterruptManager.hpp
kernel/driver/: BlockCache.hpp  BlockDevice.hpp  BlockIO.hpp  BlockStorageDevice.hpp  DeviceManager.cpp  DeviceManager.hpp  Disk.hpp  Partition.hpp  TTYDevice.cpp
kernel/driver/PCI/: BlockStorageDevice.hpp  PCIDriver.hpp  PCIManager.cpp  PCIManager.hpp
kernel/driver/input/: Keyboard.cpp  Keyboard.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp
kernel/driver/ramdisk/: RamDisk.hpp
kernel/fonts/: fonts.S
kernel/fs/: Elf64.cpp  Elf64.hpp  File.cpp  File.hpp  KernelFS.cpp  KernelFS.hpp  KernelFile.cpp  KernelFile.hpp  TTY.cpp  TTY.hpp  TTYFile.cpp  TTYFile.hpp  TTYManager.cpp  TTYManager.hpp
kernel/fs/ext2/: Ext2File.hpp  Ext2FileSystem.hpp  Ext2Inode.hpp  Ext2Superblock.hpp
kernel/fs/ext2fs/: Ext2AddressSpace.cpp  Ext2AddressSpace.hpp  Ext2Dentry.hpp  Ext2FSInfo.cpp  Ext2FSInfo.hpp  Ext2File.cpp  Ext2File.hpp  Ext2FileSystemType.hpp  Ext2Inode.cpp  Ext2Inode.hpp  Ext2SuperBlock.hpp
kernel/fs/kernelfs/: KernelAddressSpace.cpp  KernelAddressSpace.hpp  KernelDentry.cpp  KernelFSInfo.hpp  KernelFile.cpp  KernelFile.hpp  KernelFileSystemType.hpp  KernelInode.cpp  KernelInode.hpp  KernelSuperBlock.cpp  KernelSuperBlock.hpp
kernel/fs/misc/: Directory.hpp  FileManager.hpp  Inode.hpp  Superblock.hpp  TtyFile.hpp
kernel/fs/vfs/: AddressSpace.cpp  AddressSpace.hpp  BaseFS.hpp  Dentry.cpp  Dentry.hpp  DentryCache.cpp  DentryCache.hpp  DeviceFile.hpp  DirectoryCache.hpp  File.cpp  File.hpp  FileSystem.hpp  Inode.cpp  Inode.hpp  PageCache.hpp  SuperBlock.cpp  SuperBlock.hpp  Superblock.hpp  VirtualFileSystem.cpp  VirtualFileSystem.hpp
kernel/initrd/: initrd.S
kernel/lib/: Heap.hpp  Heap.tpp
kernel/mm/: Page.hpp  PageTable.cpp  PageTable.hpp  PhysicalAllocator.cpp  PhysicalAllocator.hpp  PhysicalMapping.cpp  PhysicalMapping.hpp  VirtualArea.cpp  VirtualArea.hpp  VirtualMapping.cpp  VirtualMapping.hpp  sbrk.c  sbrk.cpp  sbrk.h  sbrk.hpp
kernel/proc/: Process.cpp  Process.hpp  ProcessScheduler.cpp  ProcessScheduler.hpp  ProcessTable.cpp  ctx_sw.S
kernel/script/: initrd.sh  user_apps.sh
kernel/scripts/: initrd.s.sh  user_apps.sh
kernel/src/: Constant.h  CpuCapabilities.h  GlobalDescTable.S  GlobalDescTable.cpp  GlobalDescTable.h  Kernel.cpp  Kernel.h  KernelGlobals.cpp  KernelGlobals.h  KernelSyscall.cpp  KernelSyscall.h  Segment.cpp  Segment.h
kernel/src/asm/: cpu.S  cpu.h  spinlock.h
kernel/src/boot/: SetupProcessor.S  SetupProcessor.cpp  SetupProcessor.hpp  boot.S  boot.cpp  boot.h  long_mode.S  multiboot2.h  processor_struct.cpp  processor_struct.hpp
kernel/src/console/: BasicConsole.cpp  BasicConsole.h
kernel/src/core/: Clock.cpp  Clock.hpp  Console.cpp  Console.hpp  CpuInstr.S  CpuInstr.h  CpuInstructions.h  Debug.cpp  ExceptionHandlers.S  ExceptionHandlers.cpp  ExceptionHandlers.h  InterruptDescTable.S  InterruptDescTable.cpp  InterruptDescTable.h  InterruptDispacther.h  InterruptDispatcher.cpp  InterruptDispatcher.h  InterruptHandlers.S  InterruptHandlers.cpp  InterruptHandlers.h  Kernel.cpp  Kernel.hpp  Syscall.cpp  Syscall.hpp  SyscallHandler.S  SyscallHandler.cpp  SyscallHandler.h  handlers.S
kernel/src/dev/: Acpica.cpp  Acpica.h  BlockCache.cpp  BlockCache.h  BlockDevice.cpp  BlockDevice.h  DeviceExplorer.cpp  DeviceExplorer.h  Disk.cpp  Disk.h  Partition.h
kernel/src/driver/: BlockDevice.hpp  BlockStorageDevice.hpp  CharacterDevice.hpp  DeviceManager.cpp  DeviceManager.hpp  Disk.hpp  Partition.cpp  Partition.hpp  TTYDevice.cpp  TTYDevice.hpp
kernel/src/fs/: DEntry.cpp  DEntry.h  Elf64.cpp  Elf64.hpp  Elf64File.h  File.cpp  File.h  FileCache.cpp  FileCache.h  Inode.cpp  Inode.h  SuperBlock.h  TTY.cpp  TTY.hpp  TTYManager.hpp  VFS.cpp  VFS.h  VFS_design.h
kernel/src/mem/: AddressSpace.cpp  AddressSpace.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryDescriptor.cpp  MemoryDescriptor.h  MemoryRegion.h  Page.cpp  Page.h  PageTable.S  PageTable.cpp  PageTable.h  PageTableStruct.h
kernel/src/mm/: Page.hpp  PageTable.cpp  PageTable.hpp  PhysicalAllocator.cpp  PhysicalAllocator.hpp  PhysicalMapping.cpp  PhysicalMapping.hpp  VirtualArea.cpp  VirtualArea.hpp  VirtualMapping.cpp  VirtualMapping.hpp  sbrk.cpp  sbrk.hpp
kernel/src/proc/: Proces.cpp  Process.S  Process.cpp  Process.h  Process.hpp  ProcessFiles.h  ProcessGroup.cpp  ProcessGroup.hpp  ProcessScheduler.S  ProcessScheduler.cpp  ProcessScheduler.h  (+6 more)
lib/acpica/: CMakeLists.txt  Readme.md
lib/libc/: CMakeLists.txt  Makefile  Readme.md
lib/libdwarf/: CMakeLists.txt
lib/libstdcpp/: CMakeLists.txt  Makefile  Readme.md
lib/libunwind/: CMakeLists.txt
lib/libutils/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/test_lib_c/: stdbit_test.cpp  string_test.cpp
tests/test_lib_stdcpp/: atomic_test.cpp  function_test.cpp  optional_test.cpp  set_test.cpp  string_test.cpp  unordered_map_test.cpp  unordered_set_test.cpp
tests/test_lib_unwind/: exception_test.cpp
tools/UnitTestFramework/: CMakeLists.txt
user/: CMakeLists.txt  Makefile
user/glue/: syscall.S
user/test1/: main.c
(+562 files in other folders)
